--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -265,3 +265,30 @@ div.legendMuni {
 #bell {
     color:#5ACE52
 }
+
+#bellActive {
+    color:#5ACE52;
+   
+
+    animation: blinkTwo 1s linear infinite;
+}
+
+@keyframes blinkTwo{
+    0% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.8);
+    }
+    /* 50% {
+        -webkit-transform: scale(0.4);
+        transform: scale(0.5);
+    } 
+     100% {
+      -webkit-transform: scale(0.5);
+      transform: scale(0.5);
+    }  */
+}
+
+#munic-header{
+    font-size: 1.2rem;
+    color: brown;
+}
