--- a/src/scss/partials/variable.scss
+++ b/src/scss/partials/variable.scss
@@ -21,13 +21,12 @@ $color-green:#5ACE52;
 $green-light:#f4fcf3;
 $green-highlight:#E8F8E7;
 $grey-light: #BDBDBD;
-
-
+$shadow-color: #00000029;
+$dark-blue: #002CA6;
 // font-family
 
 $openSanse:'Open Sans', sans-serif;
  
-
 //Break point
 $mb-sm:375px;
 $mb-md:480px;
@@ -39,6 +38,7 @@ $lg-tab:991px;
 $ls-tab:1024px;
 $desktop:1200px;
 $md-desktop:1440px;
+$lg-desktop: 1640px;
 
 
 
