--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,8 @@
 @import "partials/variable";
 @import "layout/breadcrumb";
 @import "layout/header";
+@import "layout/about_banner.scss";
+@import "pages/about_page.scss";
 @import "layout/footer";
 @import "layout/login";
 @import "layout/accordion";
