--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -141,8 +141,29 @@ section{
 }
 @media screen and (max-width:$mb-xl){
     h3.openspace-title {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         line-height: 2rem;
     }
+}
+@media screen and (max-width:$mb-lg){
+    h3.openspace-title {
+        font-size: 1.1rem;
+        line-height: 2rem;
+    }
+    .ptb-150{
+        padding:100px 0;
+    }
+    .mtb-100{
+        margin: 60px 0;
+    }
     
+    .pt-150{
+        padding-top: 80px;
+    }
+    .pb-150{
+        padding-bottom:80px;
+    }
+    .mb-150{
+        margin-bottom:80px;
+    }
 }
