--- a/src/scss/layout/about_banner.scss
+++ b/src/scss/layout/about_banner.scss
@@ -15,7 +15,7 @@ section.about-banner{
         right: 0;
         z-index: 1;
     } */
-    padding-top: 115px;
+    // padding-top: 115px;
     @include flexvr;
     // background-size: cover !important;
     background-repeat: no-repeat !important;
