--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -19,6 +19,14 @@
     height: 50px;
     width: 50px;
 } */
+#allostext{
+    font-size: 12px;
+    color: rgb(134, 134, 134);
+}
+.pmarker{
+    color: white;
+    font-size: 12px;
+}
 
 .loc{
     width:20px;
@@ -259,6 +267,7 @@ div.legendMuni {
     height: 18px ;
     width: 20px;
     margin-right: 10px;
+    background-color: #f8f8c3;
 }
 
 
