--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "layout/footer";
 @import "layout/login";
 @import "layout/accordion";
+@import "layout/modal.scss";
 @import "pages/home";
 @import "pages/resources";
 @import "pages/app";
@@ -20,4 +21,5 @@
 @import "base/form";
 @import "pages/about";
 @import "base/pagination";
+@import "master/master.scss";
 
