corrected IOM name

--- a/src/components/about.html
+++ b/src/components/about.html
@@ -236,8 +236,8 @@
                             <div class="footer-widget contact-widget">
                                 <h5>Contact</h5>
                                 <ul>
-                                    <li><i class="humanitarian-icon-Location"></i><span>International Immigration
-                                            Organization (IOM)
+                                    <li><i class="humanitarian-icon-Location"></i><span>
+                                        International Organization for Migration | Nepal (IOM)
                                             7/1 Thirbaum Road, Baluwatar-1
                                             P.O. Box: 25503, Kathmandu, Nepal</span></li>
                                     <li><i class="humanitarian-icon-Fax"></i><span>+977 1 442 62 50</span></li>
